# KPO-Distribution

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
app/app/: settings.py
kpo/account/: urls.py  views.py
kpo/account/templates/account/: registration.html
kpo/kpo/: settings.py  urls.py
kpo/music/: models.py  urls.py
kpo/music/migrations/: 0003_alter_concert_song.py
kpo/music/static/music/: styles.css
kpo/music/templates/music/: index.html  view_list.html
scripts/: run_server.py
src/kpo/: app.py  concerts.py
src/kpo/kpo/: settings.py  urls.py
src/kpo/music/: admin.py  forms.py  models.py  urls.py  views.py
src/kpo/music/__tests/: test_view.py
src/kpo/music/migrations/: 0001_initial.py  0002_alter_file_part.py  0002_remove_concert_performance_date_remove_file_part_and_more.py  0003_alter_file_part.py  0004_alter_concert_song_alter_concert_title_and_more.py  0005_alter_concert_season_alter_file_pdf_alter_part_file_and_more.py  0006_remove_concert_song_remove_part_file_and_more.py  0007_alter_song_concert.py  0008_alter_song_concert.py  0009_alter_song_concert.py  0010_alter_file_options_alter_file_part_alter_part_song_and_more.py  0011_alter_file_options_alter_part_options_and_more.py
src/kpo/music/templates/: base.html
src/kpo/music/tests/: test_models.py
src/kpo/scripts/: setup_db.py
src/kpo/scripts/setup_db_data/: data.csv  (+1 more)
src/kpo/templates/: home.html
src/kpo_dist_api/: app.py  concerts.py  config.py  models.py  parts.py  songs.py  swagger.yml
src/kpo_dist_api/db/: build_database.py  music.db  seed_database.py
(+13 files in other folders)
