[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


[project]
name = "flask-music-distribution"
authors = [
    {name = "Matt Hawley", email = "r.matt.hawley@gmail.com"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "isort"
]

[tool.isort]
profile = "black"